force-app/main/default/objects/Contact/fields/Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>This will store Address Line 1 of Person</description>
    <label>Address Line 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>