force-app/main/default/objects/Contact/fields/Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_2__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>This will store Address line 2 details of person</description>
    <label>Address Line 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>