force-app/main/default/objects/Contact/fields/Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_3__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>This will store Address line 3 details of person</description>
    <label>Address Line 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>