force-app/main/default/objects/Contact/fields/Address_Manual_Override__c.field-meta.xml
<CustomField>
    <fullName>Address_Manual_Override__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>To verify if the address is manually overriden</description>
    <inlineHelpText>Address Manual Override</inlineHelpText>
    <label>Address Manual Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>