force-app/main/default/objects/Contact/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>This field stores the county of a person</description>
    <inlineHelpText>This field stores the county of a person</inlineHelpText>
    <label>County</label>
    <length>150</length>
    <type>Text</type>
</CustomField>