force-app/main/default/objects/Contact/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Line of business of the practitioner</description>
    <label>Line of Business</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invisalign</fullName>
            </value>
            <value>
                <fullName>iTero</fullName>
            </value>
            <value>
                <fullName>DentaXrai</fullName>
            </value>
            <value>
                <fullName>exocad</fullName>
                <label>Exocad</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>