force-app/main/default/objects/Contact/fields/Native_Address__c.field-meta.xml
<CustomField>
    <fullName>Native_Address__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>This field stores the native address of a person</description>
    <inlineHelpText>This field stores the native address of a person</inlineHelpText>
    <label>Native Address</label>
    <type>Address</type>
</CustomField>