force-app/main/default/objects/Contact/fields/Native_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Native_Address_Line_1__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Native Address Line 1</description>
    <inlineHelpText>Native Address Line 1</inlineHelpText>
    <label>Native Address Line 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>