force-app/main/default/objects/Contact/fields/Native_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Native_Address_Line_2__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Native Address Line 2</description>
    <inlineHelpText>Native Address Line 2</inlineHelpText>
    <label>Native Address Line 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>