force-app/main/default/objects/Contact/fields/Native_language_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Native_language_Last_Name__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>This field stores the native last name of a person</description>
    <inlineHelpText>This field stores the native last name of a person</inlineHelpText>
    <label>Native language Last Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>