force-app/main/default/objects/Contact/fields/Native_language_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Native_language_Salutation__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>This field stores the native salutation of a person</description>
    <inlineHelpText>This field stores the native salutation of a person</inlineHelpText>
    <label>Native language Salutation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>