force-app/main/default/objects/Contact/fields/Person_Id__c.field-meta.xml
<CustomField>
    <fullName>Person_Id__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This is used to store the Business Id of the person</description>
    <label>Person Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>