force-app/main/default/objects/Contact/fields/Preferred_language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_language__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>This field stores the preferred language of a person</description>
    <inlineHelpText>This field stores the preferred language of a person</inlineHelpText>
    <label>Preferred language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Mandarin</fullName>
            </value>
            <value>
                <fullName>Cantonese</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Bengali</fullName>
            </value>
            <value>
                <fullName>Russian</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Turkish</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Punjabi</fullName>
            </value>
            <value>
                <fullName>Telugu</fullName>
            </value>
            <value>
                <fullName>Marathi</fullName>
            </value>
            <value>
                <fullName>Tamil</fullName>
            </value>
            <value>
                <fullName>Urdu</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Vietnamese</fullName>
            </value>
            <value>
                <fullName>Thai</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>