force-app/main/default/objects/Contact/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This field stores the profession to which person belongs</description>
    <inlineHelpText>This field stores the profession to which person belongs</inlineHelpText>
    <label>Profession</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Dental Hygienist</fullName>
            </value>
            <value>
                <fullName>Dental Assistant</fullName>
            </value>
            <value>
                <fullName>Dental Technician</fullName>
            </value>
            <value>
                <fullName>Office Administrator</fullName>
            </value>
            <value>
                <fullName>Finance Personnel</fullName>
            </value>
            <value>
                <fullName>Receptionist</fullName>
            </value>
            <value>
                <fullName>Marketing Personnel</fullName>
            </value>
            <value>
                <fullName>IT Personnel</fullName>
            </value>
            <value>
                <fullName>Sales Personnel</fullName>
            </value>
            <value>
                <fullName>General Manager</fullName>
            </value>
            <value>
                <fullName>Treatment Coordinator</fullName>
            </value>
            <value>
                <fullName>Customer Support Personnel</fullName>
            </value>
            <value>
                <fullName>Purchasing Personnel</fullName>
            </value>
            <value>
                <fullName>Operation Personnel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>