force-app/main/default/objects/Contact/fields/Send_To__c.field-meta.xml
<CustomField>
    <fullName>Send_To__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>To retrigger the push topic request, which system the data is to be sent to</description>
    <label>Send To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MDM</fullName>
            </value>
            <value>
                <fullName>KAFKA</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>