force-app/main/default/objects/Contact/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This field stores the Specialty for a person</description>
    <inlineHelpText>This field stores the Specialty for a person</inlineHelpText>
    <label>Specialty</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Practice</fullName>
            </value>
            <value>
                <fullName>Orthodontics and Dentofacial Orthopedics</fullName>
            </value>
            <value>
                <fullName>Pediatric Dentistry</fullName>
            </value>
            <value>
                <fullName>Endodontics</fullName>
            </value>
            <value>
                <fullName>Periodontics</fullName>
            </value>
            <value>
                <fullName>Prosthodontics</fullName>
            </value>
            <value>
                <fullName>Oral and Maxillofacial Surgery</fullName>
            </value>
            <value>
                <fullName>Oral and Maxillofacial Pathology</fullName>
            </value>
            <value>
                <fullName>Dental Anesthesiology</fullName>
            </value>
            <value>
                <fullName>Oral and Maxillofacial Radiology</fullName>
            </value>
            <value>
                <fullName>Public Health</fullName>
            </value>
            <value>
                <fullName>Oral Medicine</fullName>
            </value>
            <value>
                <fullName>Orofacial Pain</fullName>
            </value>
            <value>
                <fullName>Operative Dentistry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>