force-app/main/default/objects/Contact/fields/Status_reason__c.field-meta.xml
<CustomField>
    <fullName>Status_reason__c</fullName>
    <businessOwnerUser>mjavvadhi@aligntech.com.orion</businessOwnerUser>
    <complianceGroup>None</complianceGroup>
    <description>This field stores the status reson when status for a person is changed</description>
    <inlineHelpText>This field stores the status reson when status for a person is changed</inlineHelpText>
    <label>Status reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legal or Regulatory Compliance</fullName>
            </value>
            <value>
                <fullName>Violation of Policy</fullName>
            </value>
            <value>
                <fullName>Request by user</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Inactivity</fullName>
            </value>
            <value>
                <fullName>Business Decision</fullName>
            </value>
            <value>
                <fullName>Customer Request</fullName>
                <isActive>false</isActive>
                <label>Customer Request</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>