force-app/main/default/objects/Contact/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This is used to store the latest KAFKA request JSON updated time</description>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>