force-app/main/default/objects/Contact/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FULL_NAME</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>